--- a/documents.html
+++ b/documents.html
@@ -13,7 +13,7 @@
 </header>
 <body>
     <div class="content">
-        <div class="documents Edumundo"><a href="./Documents/Edumundo/">Edumundo</a> </div>
+        <div class="documents Edumundo"><a href="./Documents/Edumundo/edumundo.pdf" target="_blank">Edumundo</a> </div>
         <div class="documents Feedbacks">
             <a href="#" class="folder-title">Feedbacks about me</a>
         <div class="subfolders">
@@ -47,6 +47,11 @@
                 </div>
                 <div class="folder">
                     <a href="./Documents/Meeting Techniques/agenda.pdf" target="_blank">Agenda</a>
+                </div>
+                <div class="folder">
+                    <a href="./Documents/Meeting Techniques/Evaluation Form/Anton to Amir evaluation form.pdf" target="_blank">Anton Evaluation</a>
+                    <a href="./Documents/Meeting Techniques/Evaluation Form/FredericMeetingsEvalForAmir.pdf" target="_blank">Frederic Evaluation</a>
+                    <a href="./Documents/Meeting Techniques/Evaluation Form/joey to Amir evaluation form.pdf" target="_blank">Joey Evaluation</a>
                 </div>
             </div>
         </div>
