--- a/documents.html
+++ b/documents.html
@@ -86,7 +86,7 @@
             <a href="#">Study career coaching</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Study career coaching/2024-2025 1.2 Advisory Interview.pdf" target="_blank">Study career coaching</a>
+                    <a href="./Documents/Study career coaching/1.2 Advisory Interview.pdf" target="_blank">Study career coaching</a>
                 </div>
             </div>
         </div>
