--- a/documents.html
+++ b/documents.html
@@ -102,7 +102,7 @@
     <footer>
         <div class="icons">
             <a href="https://linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=amir-ranjbar-229774342"><img src="./images/linkedin-logo.png" alt="linkedin"></a>
-            <a href="mailto:amir.ranjbar.maki@studnet.nhlstenden.com"><img src="./images/outlook.png" alt="outlook"></a>
+            <a href="mailto:amir.ranjbar.maki@student.nhlstenden.com"><img src="./images/outlook.png" alt="outlook"></a>
         </div>
     </footer>
 </body>
