second semester added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/icon.png">
 </head>
 <header>
-    <a href="./documents.html">Documents</a>
+    <a href="./semesters.html">Documents</a>
     <a href="aboutme.html">About Me</a>
 </header>
 <body>
