--- a/documentsS1.html
+++ b/documentsS1.html
@@ -13,21 +13,21 @@
 </header>
 <body>
     <div class="content">
-        <div class="documents Edumundo"><a href="./Documents/Edumundo/edumundo.pdf" target="_blank">Edumundo</a> </div>
+        <div class="documents Edumundo"><a href="./Documents/Semester1/Edumundo/edumundo.pdf" target="_blank">Edumundo</a> </div>
         <div class="documents Feedbacks">
             <a href="#" class="folder-title">Feedbacks about me</a>
         <div class="subfolders">
         <div class="folder">
-            <a href="./Documents/Feedbacks/Period 1/Cosmin to Amir.pdf" target="_blank">P1-coasmin - PDF</a>
-            <a href="./Documents/Feedbacks/Period 1/Milana to Amir.pdf" target="_blank">P1-Milana- PDF</a>
-            <a href="./Documents/Feedbacks/Period 1/Pharrell to Amir.pdf" target="_blank">P1-Pharrell- PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 1/Cosmin to Amir.pdf" target="_blank">P1-coasmin - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 1/Milana to Amir.pdf" target="_blank">P1-Milana- PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 1/Pharrell to Amir.pdf" target="_blank">P1-Pharrell- PDF</a>
         </div>
         <div class="folder">
-            <a href="./Documents/Feedbacks/Period 2/Frederic to Amir.pdf" target="_blank">P2-Frederic - PDF</a>
-            <a href="./Documents/Feedbacks/Period 2/Joey to Amir.pdf" target="_blank">P2-Joey - PDF</a>
-            <a href="./Documents/Feedbacks/Period 2/Anton to Amir.pdf" target="_blank">P2-Anton - PDF</a>
-            <a href="./Documents/Feedbacks/Period 2/Vika To Amir.pdf" target="_blank">P2-Vika - PDF</a>
-            <a href="./Documents/Feedbacks/Period 2/Sean To Amir.pdf" target="_blank">P2-Sean - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 2/Frederic to Amir.pdf" target="_blank">P2-Frederic - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 2/Joey to Amir.pdf" target="_blank">P2-Joey - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 2/Anton to Amir.pdf" target="_blank">P2-Anton - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 2/Vika To Amir.pdf" target="_blank">P2-Vika - PDF</a>
+            <a href="./Documents/Semester1/Feedbacks/Period 2/Sean To Amir.pdf" target="_blank">P2-Sean - PDF</a>
         </div>
     </div>
         </div>
@@ -35,7 +35,7 @@
             <a href="#">Commiunication</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Commiunications/interview schedule IT-1D.pdf" target="_blank">Interview schedule</a>
+                    <a href="./Documents/Semester1/Commiunications/interview schedule IT-1D.pdf" target="_blank">Interview schedule</a>
                 </div>
             </div>
         </div>
@@ -43,15 +43,15 @@
             <a href="#">Meeting Techniques</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Meeting Techniques/minutes of meeting 3rd sep.pdf" target="_blank">Minutes of Meeting</a>
+                    <a href="./Documents/Semester1/Meeting Techniques/minutes of meeting 3rd sep.pdf" target="_blank">Minutes of Meeting</a>
                 </div>
                 <div class="folder">
-                    <a href="./Documents/Meeting Techniques/agenda.pdf" target="_blank">Agenda</a>
+                    <a href="./Documents/Semester1/Meeting Techniques/agenda.pdf" target="_blank">Agenda</a>
                 </div>
                 <div class="folder">
-                    <a href="./Documents/Meeting Techniques/Evaluation Form/Anton to Amir evaluation form.pdf" target="_blank">Anton Evaluation</a>
-                    <a href="./Documents/Meeting Techniques/Evaluation Form/FredericMeetingsEvalForAmir.pdf" target="_blank">Frederic Evaluation</a>
-                    <a href="./Documents/Meeting Techniques/Evaluation Form/joey to Amir evaluation form.pdf" target="_blank">Joey Evaluation</a>
+                    <a href="./Documents/Semester1/Meeting Techniques/Evaluation Form/Anton to Amir evaluation form.pdf" target="_blank">Anton Evaluation</a>
+                    <a href="./Documents/Semester1/Meeting Techniques/Evaluation Form/FredericMeetingsEvalForAmir.pdf" target="_blank">Frederic Evaluation</a>
+                    <a href="./Documents/Semester1/Meeting Techniques/Evaluation Form/joey to Amir evaluation form.pdf" target="_blank">Joey Evaluation</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <a href="#">Reflection Report</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Reflection Report/Iceburg Reflection.pdf" target="_blank">Reflection Report</a>
+                    <a href="./Documents/Semester1/Reflection Report/Iceburg Reflection.pdf" target="_blank">Reflection Report</a>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
             <a href="#">project plan</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Project plan/Project Plan IT-1D.pdf" target="_blank">Project Plan IT-1D</a>
+                    <a href="./Documents/Semester1/Project plan/Project Plan IT-1D.pdf" target="_blank">Project Plan IT-1D</a>
                 </div>
             </div>
         </div>
@@ -75,10 +75,10 @@
             <a href="#">Presentation</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Presentation/prepared-script.pdf" target="_blank">Prepration script</a>
+                    <a href="./Documents/Semester1/Presentation/prepared-script.pdf" target="_blank">Prepration script</a>
                 </div>
                 <div class="folder">
-                    <a href="./Documents/Presentation/Circle Solutions PERIOD 1.pptx" target="_blank">Presentation PowerPoint</a>
+                    <a href="./Documents/Semester1/Presentation/Circle Solutions PERIOD 1.pptx" target="_blank">Presentation PowerPoint</a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <a href="#">Study career coaching</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Study career coaching/1.2 Advisory Interview.pdf" target="_blank">Study career coaching</a>
+                    <a href="./Documents/Semester1/Study career coaching/1.2 Advisory Interview.pdf" target="_blank">Study career coaching</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
             <a href="#">My Cv</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/cv/AMIR RANJBAR CV.pdf" target="_blank">My CV</a>
+                    <a href="./Documents/Semester1/Semester1/cv/AMIR RANJBAR CV.pdf" target="_blank">My CV</a>
                 </div>
             </div>
         </div>
