new files added

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -28,7 +28,7 @@
             <a href="#">Commiunication</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Semester1/Commiunications/interview schedule IT-1D.pdf" target="_blank">Interview schedule</a>
+                    <a href="./Documents/Semester2//Presentation Feedback/photo_2025-06-08_21-06-42.jpg" target="_blank">Presentation Feedback</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                     <a href="./Documents/Semester2/PDP/PDP Amir Ranjbar.pdf" target="_blank">PDP</a>
                 </div>
                 <div class="folder">
-                    <a href="./Documents/Semester1/Presentation/Circle Solutions PERIOD 1.pptx" target="_blank">Presentation PowerPoint</a>
+                    <a href="./Documents/Semester1/Presentation/Circle Solutions PERIOD 1.pptx" target="_blank">P</a>
                 </div>
             </div>
         </div>
