adding new files

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -24,8 +24,8 @@
         </div>
     </div>
         </div>
-        <div class="documents Commiunications">
-            <a href="#">Commiunication</a>
+        <div class="documents Presentation Feedback">
+            <a href="#">Presentation feedback</a>
             <div class="subfolders">
                 <div class="folder">
                     <a href="./Documents/Semester2//Presentation Feedback/photo_2025-06-08_21-06-42.jpg" target="_blank">Presentation Feedback</a>
