--- a/documentsS2.html
+++ b/documentsS2.html
@@ -21,6 +21,9 @@
             <a href="./Documents/Semester2/360 Feedbacks/360 from Joey.pdf" target="_blank">360-Joey - PDF</a>
             <a href="./Documents/Semester2/360 Feedbacks/360 From Miguel.pdf" target="_blank">360-Miguel- PDF</a>
             <a href="./Documents/Semester2/360 Feedbacks/360 From Vika.pdf 1/Pharrell to Amir.pdf" target="_blank">360-Vika- PDF</a>
+            <a href="./Documents/Semester2/360 Feedbacks/360 From Pharrell.pdf" target="_blank">360-Pharrell- PDF</a>
+            <a href="./Documents/Semester2/360 Feedbacks/360-Frederic.pdf" target="_blank">360-Frederic- PDF</a>
+            <a href="./Documents/Semester2/360 Feedbacks/360-Bence.pdf" target="_blank">360-Bence- PDF</a>
         </div>
     </div>
         </div>
