adding new project plan

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -66,7 +66,7 @@
             <a href="#">project plan</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Semester1/Project plan/Project Plan IT-1D.pdf" target="_blank">Project Plan IT-1D</a>
+                    <a href="./Documents/Semester1/Project plan/Project Plan IT-1A.pdf" target="_blank">Project Plan IT-1A</a>
                 </div>
             </div>
         </div>
