fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -13,13 +13,7 @@
 </header>
 <body>
     <div class="content">
-        <div class="documents Edumundo">
-            <a href="./Documents/Semester2/Edumundo/Edumundo.pdf" target="_blank">Edumundo</a>
-            <div class="subfolders">
-                <div class="folder">
-                    <a href="./Documents/Semester2/Edumundo/Appendix-A Reflection Report.pdf" target="_blank">Reflection Report</a>
-                </div> 
-            </div>
+        <div class="documents Edumundo"><a href="./Documents/Semester2/Edumundo/Edumundo.pdf" target="_blank">Edumundo</a> </div>
         <div class="documents Feedbacks">
             <a href="#" class="folder-title">Feedbacks about me</a>
         <div class="subfolders">
