fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -83,10 +83,15 @@
             </div>
         </div>
         <div class="documents Study">
-            <a href="#">Study career coaching</a>
+            <a href="#">Communication</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Semester1/Study career coaching/1.2 Advisory Interview.pdf" target="_blank">Study career coaching</a>
+                    <a href="./Documents/Semester2/Communication/alex.pdf" target="_blank">Alex</a>
+                    <a href="./Documents/Semester2/Communication/Peter.pdf" target="_blank">Peter</a>
+                    <a href="./Documents/Semester2/Communication/Joey.pdf" target="_blank">Joey</a>
+                    <a href="./Documents/Semester2/Communication/nick1.pdf" target="_blank">Nick</a>
+                    <a href="./Documents/Semester2/Communication/Pharrell.pdf" target="_blank">Pharrell</a>
+                    <a href="./Documents/Semester2/Communication/Oliver1.pdf" target="_blank">Oliver</a>
                 </div>
             </div>
         </div>
