fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
         </div>
-        <div class="documents Presentation">
+        <div class="documents PDP">
             <a href="#">PDP</a>
             <div class="subfolders">
                 <div class="folder">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <div class="documents Study">
+        <div class="documents Communication">
             <a href="#">Communication</a>
             <div class="subfolders">
                 <div class="folder">
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </div>
-        <div class="documents CV">
+        <div class="documents ">
             <a href="#">My Cv</a>
             <div class="subfolders">
                 <div class="folder">
