fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -58,7 +58,7 @@
             <a href="#">Reflection Report</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Semester2/Reflection Repor/reflection report .pdf" target="_blank">Reflection Report</a>
+                    <a href="./Documents/Semester2/Reflection Report/reflection report.pdf" target="_blank">Reflection Report</a>
                 </div>
             </div>
         </div>
