fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -21,6 +21,7 @@
                     <a href="./Documents/Semester2/Edumundo/Appendix-A Reflection Report.pdf" target="_blank">Appendix-A reflectio report</a>
                 </div>
             </div>
+        </div>
         <div class="documents Feedbacks">
             <a href="#" class="folder-title">Feedbacks about me</a>
         <div class="subfolders">
