fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -105,10 +105,10 @@
             </div>
         </div>
         <div class="documents ">
-            <a href="#">My Cv</a>
+            <a href="#">Advisory Report</a>
             <div class="subfolders">
                 <div class="folder">
-                    <a href="./Documents/Semester1/Semester1/cv/AMIR RANJBAR CV.pdf" target="_blank">Advisory Report</a>
+                    <a href="./Documents/Semester2/Advisory Report/CampusLink_Technical_Advisory_Report.pdf" target="_blank">Advisory Report</a>
                 </div>
             </div>
         </div>
