fixing the issue

--- a/documentsS2.html
+++ b/documentsS2.html
@@ -32,6 +32,7 @@
             <a href="./Documents/Semester2/360 Feedbacks/360 - Pharrell.pdf" target="_blank">360-Pharrell- PDF</a>
             <a href="./Documents/Semester2/360 Feedbacks/360-Frederic.pdf" target="_blank">360-Frederic- PDF</a>
             <a href="./Documents/Semester2/360 Feedbacks/360-Bence.pdf" target="_blank">360-Bence- PDF</a>
+            <a href="./Documents/Semester2/360 Feedbacks/360 - Coco.pdf" target="_blank">360-Coco- PDF</a>
         </div>
     </div>
         </div>
