--- a/documentsY2S1.html
+++ b/documentsY2S1.html
@@ -22,6 +22,8 @@
                     <a href="./Documents/Year2/Semester1/Feedback/Miriam.pdf" target="_blank">Miriam</a>
                     <a href="./Documents/Year2/Semester1/Feedback/Iarina.pdf" target="_blank">Iarina</a>
                     <a href="./Documents/Year2/Semester1/Feedback/Iustin.pdf" target="_blank">Iustin</a>
+                    <a href="./Documents/Year2/Semester1/Feedback/Gerben Dolsma client.pdf" target="_blank">Client</a>
+                    <a href="./Documents/Year2/Semester1/Feedback/CTO.pdf" target="_blank">CTO (StakeHolder)</a>
                 </div>
             </div>
         </div>
@@ -64,7 +66,7 @@
                 </div>
             </div>
         </div>
-    </div>     
+    </div>
     <footer>
         <div class="icons">
             <a href="https://linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=amir-ranjbar-229774342"><img src="./images/linkedin-logo.png" alt="linkedin"></a>
