--- a/documentsY2S1.html
+++ b/documentsY2S1.html
@@ -58,10 +58,10 @@
             <div class="subfolders">
                 <div class="folder">
                     <a href="./Documents/Year2/Semester1/Research/Homework1_ResearchQuestion.pdf" target="_blank">HomeWork Lesson 1</a>
-                    <a href="./Documents/Year2/Semester1/Research/Homework2_InterviewQuestions.pdf" target="_blank">HomeWork Lesson 2</a>
-                    <a href="./Documents/Year2/Semester1/Research/Homework2_Observation Form.pdf" target="_blank">HomeWork Lesson 2</a>
-                    <a href="./Documents/Year2/Semester1/Research/Homework3_BellaItaliaPresentation.pdf" target="_blank">HomeWork Lesson 3</a>
-                    <a href="./Documents/Year2/Semester1/Research/Homework3_ScopeDiagram.pdf" target="_blank">HomeWork Lesson 3</a>
+                    <a href="./Documents/Year2/Semester1/Research/Homework2_InterviewQuestions.pdf" target="_blank">HomeWork Lesson 2 (interview Questions)</a>
+                    <a href="./Documents/Year2/Semester1/Research/Homework2_Observation Form.pdf" target="_blank">HomeWork Lesson 2(observation Form)</a>
+                    <a href="./Documents/Year2/Semester1/Research/Homework3_BellaItaliaPresentation.pdf" target="_blank">HomeWork Lesson 3(BellaItalia Presentation)</a>
+                    <a href="./Documents/Year2/Semester1/Research/Homework3_ScopeDiagram.pdf" target="_blank">HomeWork Lesson 3(Scope Diagram)</a>
                     <a href="./Documents/Year2/Semester1/Research/ResearchReport.pdf" target="_blank">ResearchReport</a>
                 </div>
             </div>
